stockmanager/stockmanagerchart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockmanager-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stockmanager
  template:
    metadata:
      labels:
        app: stockmanager
    spec:
      containers:
        - name: stockmanager
          image: gcr.io/PROJECT_ID/IMAGE1
          ports:
            - containerPort: 8030
