stockmanager/stockmanagerchart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockmanager-service
spec:
  selector:
    app: stockmanager
  ports:
    - name: http
      protocol: TCP
      port: 8030
      targetPort: 8030
