stockmanager/stockmanagerchart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stockmanager-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - <your-host-name> # Replace with your domain name
      secretName: tls-secret
  rules:
    - host: example.com # Replace with your domain name
      http:
        paths:
          - path: /stockmanager
            pathType: Prefix
            backend:
              service:
                name: stockmanager-service
                port:
                  name: http
